--- a/fits-client/pom.xml
+++ b/fits-client/pom.xml
@@ -137,5 +137,11 @@
             <artifactId>resteasy-multipart-provider</artifactId>
             <version>2.2.0.GA</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
