--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <groupId>at.ac.tuwien.isis</groupId>
+        <groupId>at.ac.tuwien.ifs</groupId>
         <artifactId>c3po</artifactId>
         <version>0.8.0</version>
     </parent>
