--- a/fits-client/pom.xml
+++ b/fits-client/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>c3po</artifactId>
-        <groupId>at.ac.tuwien.isis</groupId>
+        <groupId>at.ac.tuwien.ifs</groupId>
         <version>0.8.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -142,6 +142,22 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.6</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>at.ac.tuwien.ifs</groupId>
+            <artifactId>api</artifactId>
+            <version>0.8.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
         </dependency>
     </dependencies>
 </project>
