--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>at.ac.tuwien.isis</groupId>
+    <groupId>at.ac.tuwien.ifs</groupId>
     <artifactId>c3po</artifactId>
     <version>0.8.0</version>
     <packaging>pom</packaging>
@@ -13,6 +13,7 @@
     <modules>
         <module>doi</module>
         <module>fits-client</module>
+        <module>api</module>
     </modules>
 
 </project>
