--- a/fits-client/pom.xml
+++ b/fits-client/pom.xml
@@ -70,7 +70,11 @@
     </build>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
