--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -84,12 +84,24 @@
             <groupId>at.ac.tuwien.ifs</groupId>
             <artifactId>api</artifactId>
             <version>0.8.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.jboss.jandex</groupId>
+                <artifactId>jandex-maven-plugin</artifactId>
+                <version>1.0.7</version>
+                <executions>
+                    <execution>
+                        <id>make-index</id>
+                        <goals>
+                            <goal>jandex</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
