--- a/persistence/src/main/resources/application.properties
+++ b/persistence/src/main/resources/application.properties
@@ -9,3 +9,4 @@ quarkus.datasource.max-size=13
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
