--- a/webui/frontend/public/manifest.json
+++ b/webui/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CoreUI-React",
-  "name": "CoreUI-React sample",
+  "short_name": "C3PO",
+  "name": "C3PO",
   "icons": [
     {
       "src": "./assets/img/favicon.png",
