--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>at.ac.tuwien.ifs</groupId>
+            <artifactId>persistence</artifactId>
+            <version>0.8.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
