--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -14,6 +14,9 @@
     <artifactId>doi</artifactId>
     <version>0.8.0</version>
     <properties>
+
+        <quarkus.version>1.1.1.Final</quarkus.version>
+
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -58,6 +61,7 @@
             <version>0.8.0</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
