--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -11,7 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>rocks.artur</groupId>
-    <artifactId>doi</artifactId>
+    <artifactId>rest</artifactId>
     <version>0.8.0</version>
     <properties>
 
