--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -44,10 +44,12 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
+            <version>${quarkus.version}</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
+            <version>${quarkus.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -76,6 +78,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>at.ac.tuwien.ifs</groupId>
+            <artifactId>fits-client</artifactId>
+            <version>0.8.0</version>
         </dependency>
     </dependencies>
     <build>
