--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -64,7 +64,11 @@
             <scope>compile</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-multipart-provider</artifactId>
+            <version>4.5.5.Final</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
