--- a/webui/frontend/package.json
+++ b/webui/frontend/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
