--- a/webui/frontend/package.json
+++ b/webui/frontend/package.json
@@ -35,7 +35,8 @@
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
     "simple-line-icons": "^2.4.1",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "react-toastify": "^6.0.8"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
