--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: artourkin/c3po-rest
+          dockerfile: ./Dockerfile
           tag_with_ref: true
-          dockerfile: {path}/Dockerfile
       - name: Build and push C3PO WEBUI
         uses: docker/build-push-action@v1
         with:
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: artourkin/c3po-webui
           tag_with_ref: true
-          dockerfile: {path}/webui/Dockerfile
+          dockerfile: ./webui/Dockerfile
       - name: Build and push FITS WEB
         uses: docker/build-push-action@v1
         with:
@@ -37,4 +37,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: artourkin/fits-web
           tag_with_ref: true
-          dockerfile: {path}/fits/Dockerfile
+          dockerfile: ./fits/Dockerfile
