--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -7,6 +7,6 @@ FROM openjdk:8-jdk-slim
 WORKDIR /app
 RUN printenv
 COPY --from=builder /app/webui/target/webui-0.8.0.jar .
-COPY --from=builder /app/webui/target/lib/ .
+COPY --from=builder /app/webui/target/lib/ ./lib/
 
 ENTRYPOINT ["java", "-jar", "webui-0.8.0-runner.jar"]
