--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,38 @@ c3po-webapi/war/
 # vagrant related local settings, should never end up in the repo
 .vagrant_settings/maven_settings.xml
 .vagrant_settings/proxy_settings.conf
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
+
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+
+# OSX
+.DS_Store
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
