--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
         <node.version>v10.13.0</node.version>
-        <yarn.version>v1.12.1</yarn.version>
+        <npm.version>6.14.4</npm.version>
         <quarkus-plugin.version>1.2.1.Final</quarkus-plugin.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
@@ -66,44 +66,30 @@
                     <workingDirectory>frontend</workingDirectory>
                     <installDirectory>target</installDirectory>
                     <nodeVersion>${node.version}</nodeVersion>
-                    <yarnVersion>${yarn.version}</yarnVersion>
+                    <npmVersion>${npm.version}</npmVersion>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>install node and yarn</id>
+                        <id>install node and npm</id>
                         <goals>
-                            <goal>install-node-and-yarn</goal>
+                            <goal>install-node-and-npm</goal>
                         </goals>
                         <phase>generate-resources</phase>
                     </execution>
                     <execution>
                         <id>Install frontend dependencies</id>
                         <goals>
-                            <goal>yarn</goal>
+                            <goal>npm</goal>
                         </goals>
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>Run frontend tests</id>
-                        <goals>
-                            <goal>yarn</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <arguments>test</arguments>
-                            <environmentVariables>
-                                <CI>true</CI>
-                            </environmentVariables>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>Build frontend</id>
                         <goals>
-                            <goal>yarn</goal>
+                            <goal>npm</goal>
                         </goals>
-                        <phase>compile</phase>
                         <configuration>
                             <arguments>build</arguments>
                         </configuration>
