--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_REST_HOST=restDOCKER
+REACT_APP_REST_HOST=rest
 REACT_APP_REST_PORT=8080
-REACT_APP_FITS_HOST=fits
-REACT_APP_FITS_PORT=8080
-REACT_APP_DB_HOST=db
-REACT_APP_DB_PORT=8080
+FITS_HOST=fits
+FITS_PORT=8080
+DB_HOST=db
+DB_PORT=8080
