--- a/persistence/src/main/resources/.application.properties
+++ b/persistence/src/main/resources/.application.properties
@@ -1,12 +1,10 @@
 # datasource configuration
-quarkus.datasource.url = jdbc:h2:mem:test
-quarkus.datasource.driver = org.h2.Driver
-quarkus.datasource.username = sa
+quarkus.datasource.url=jdbc:h2:mem:test
+quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.username=sa
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
-
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
-
 quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.sql-load-script=import.sql
+#quarkus.hibernate-orm.sql-load-script=import.sql
